--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,63 @@
     <groupId>com.ragego</groupId>
     <artifactId>ragego</artifactId>
     <version>0.1</version>
+    <developers>
+        <developer>
+            <name>Philippe Vienne</name>
+            <email>philippe.vienne@insa-lyon.fr</email>
+            <organization>INSA Lyon</organization>
+            <organizationUrl>http://insa-lyon.fr</organizationUrl>
+            <timezone>CET</timezone>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>GNU GPL V3</name>
+            <comments>Apply on code</comments>
+            <url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
+        </license>
+        <license>
+            <name>Creative Commons BY-SA 3.0</name>
+            <comments>Apply on graphics and texts</comments>
+            <url>http://creativecommons.org/licenses/by-sa/3.0/legalcode</url>
+        </license>
+    </licenses>
+    <contributors>
+        <contributor>
+            <name>Pierre-Armand NICQ</name>
+        </contributor>
+    </contributors>
+    <issueManagement>
+        <url>http://github.com/${repositoryOwner}/${repositoryName}/issues</url>
+        <system>GitHub</system>
+    </issueManagement>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://github.com/${repositoryOwner}/${repositoryName}.git</url>
+            <name>RageGo GitHub repo</name>
+            <layout>git</layout>
+        </repository>
+
+        <repository>
+            <id>ragego-mvn-repo</id>
+            <url>https://raw.github.com/${repositoryOwner}/${repositoryName}/gh-pages/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+    <url>${site.url}</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <site.url>http://philippegeek.github.io/ragego</site.url>
+        <github.global.server>github</github.global.server>
+        <site.deploy.id>gh-pages</site.deploy.id>
+        <site.deploy.url>${site.url}</site.deploy.url>
+        <repositoryName>RageGo</repositoryName>
+        <repositoryOwner>PhilippeGeek</repositoryOwner>
     </properties>
 
     <build>
@@ -48,8 +102,133 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>lt.velykis.maven.skins</groupId>
+                        <artifactId>reflow-velocity-tools</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
+                    <!-- Reflow skin requires Velocity >= 1.7  -->
+                    <dependency>
+                        <groupId>org.apache.velocity</groupId>
+                        <artifactId>velocity</artifactId>
+                        <version>1.7</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <!-- GitHub site plug-in for deployment to GitHub pages -->
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.11</version>
+                <configuration>
+                    <message>Creating site for ${project.artifactId}, ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <branch>refs/heads/gh-pages</branch>                       <!-- remote branch name -->
+                    <includes><include>**/*</include></includes>
+                    <merge>true</merge>
+                    <repositoryName>${repositoryName}</repositoryName>      <!-- github repo name -->
+                    <repositoryOwner>${repositoryOwner}</repositoryOwner>    <!-- github username  -->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>github-site</id>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>site-deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <!-- This version is necessary for use with git version 1.8.5 -->
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/site/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <anonymousConnection>scm:git:git@github.com:andriusvelykis/reflow-maven-skin.git</anonymousConnection>
+                    <developerConnection>scm:git:git@github.com:andriusvelykis/reflow-maven-skin.git</developerConnection>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>summary</report>
+                            <report>license</report>
+                            <report>modules</report>
+                            <report>project-team</report>
+                            <report>scm</report>
+                            <report>issue-tracking</report>
+                            <report>dependencies</report>
+                            <report>dependency-convergence</report>
+                            <report>plugins</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-changes-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <includeOpenIssues>true</includeOpenIssues>
+                    <columnNames>Id,Type,Summary,Fix Version</columnNames>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <id>release-notes</id>
+                        <inherited>false</inherited>
+                        <reports>
+                            <report>github-report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+    <distributionManagement>
+        <site>
+            <id>${site.deploy.id}</id>
+            <name>Deployment through GitHub's site deployment plugin</name>
+            <url>${site.deploy.url}</url>
+        </site>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
