--- a/pom.xml
+++ b/pom.xml
@@ -69,15 +69,6 @@
             <name>RageGo GitHub repo</name>
             <layout>git</layout>
         </repository>
-
-        <repository>
-            <id>ragego-mvn-repo</id>
-            <url>https://raw.github.com/${repositoryOwner}/${repositoryName}/gh-pages/mvn-repo/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-        </repository>
     </repositories>
     <url>${site.url}</url>
 
@@ -185,6 +176,7 @@
                     <reportSet>
                         <reports>
                             <report>summary</report>
+                            <report>index</report>
                             <report>license</report>
                             <report>modules</report>
                             <report>project-team</report>
