--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
+                <configuration>
+                    <charset>UTF-8</charset>
+                    <docencoding>UTF-8</docencoding>
+                    <docfilessubdirs>true</docfilessubdirs>
+                    <links>
+                        <link>http://docs.oracle.com/javase/8/docs/api/</link>
+                    </links>
+                    <show>private</show>
+                    <source>1.8</source>
+                </configuration>
                 <reportSets>
                     <reportSet>
                         <id>default</id>
