Update travis build file
Former-commit-id: 94222c31c0e93c84834d303f1cb277c24c8e9c2e

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: android
 jdk:
   - oraclejdk8
+android:
+  components:
+    - build-tools-22
+    - android-21
+    - extra
 notifications:
   webhooks:
     urls:
