--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ android:
   components:
     - build-tools-22
     - android-21
+    - android-22
+    - android-20
     - extra
 notifications:
   webhooks:
