--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-language: android
+language: java
 jdk:
   - oraclejdk8
-android:
-  components:
-    - build-tools-21.1.1
-    - android-21
 notifications:
   webhooks:
     urls:
