--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 jdk:
   - oraclejdk8
+android:
+  components:
+    - build-tools-22.0.1
+    - android-22
+    - extra
+
 notifications:
   webhooks:
     urls:
