--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: java
 jdk:
   - oraclejdk8
-android:
-  components:
-    - build-tools-22.0.1
-    - android-22
-    - extra
-
+env:
+    - ANDROID_SDKS=android-22   ANDROID_TARGET=android-22   ANDROID_PT=22.0.1
+before_install:
+    # Install base Android SDK
+    - sudo apt-get update -qq
+    - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
+    - wget http://dl.google.com/android/android-sdk_r${ANDROID_PT}-linux.tgz
+    - tar xzf android-sdk_r${ANDROID_PT}-linux.tgz
+    - export ANDROID_HOME=$PWD/android-sdk-linux
+    - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+    # Install required Android components.
+    - android update sdk --filter platform-tools,android-22,extra-android-support,$ANDROID_SDKS --no-ui --force
 notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/996f1afd70df12c9e77b
-    on_success: change  # options: [always|never|change] default: always
+    on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
+    on_start: true     # default: false
