--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
                 android:name="com.ragego.android.AndroidLauncher"
                 android:label="@string/app_name"
-                android:screenOrientation="fullSensor"
+                android:screenOrientation="landscape"
                 android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
