--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,12 +22,12 @@ sourceSets {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile files('libs/App42MultiPlayerGamingSDK.jar')
 
-    //testCompile "org.mockito:mockito-all:1.9.5"
+    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.+'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
     testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
     testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
     testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
