--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,6 +22,7 @@ sourceSets {
 }
 
 dependencies {
+    compile "us.monoid.web:resty:0.3.2"
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
