--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,15 +6,20 @@
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="22"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:theme="@style/GdxTheme">
+
         <activity
                 android:name="com.ragego.android.AndroidLauncher"
                 android:label="@string/app_name"
-                android:screenOrientation="landscape"
+                android:screenOrientation="userLandscape"
+                android:hardwareAccelerated="true"
                 android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
