--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ragego.android"
-          android:versionCode="2"
-          android:versionName="1.0a">
+          android:versionCode="3"
+          android:versionName="0.1b1">
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="22"/>
 
