--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 android {
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '22.0.1'
     compileSdkVersion 22
     sourceSets {
         main {
